# fitrat

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  src.rar
src/fitrat/: __init__.py
src/fitrat/cyr_lat/: alphabet.py
src/fitrat/language_detector/: .gitignore  LanguageDetector.py  README.md  __init__.py
src/fitrat/language_detector/data/: valid.txt
src/fitrat/language_detector/model/: langdetect.ftz
src/fitrat/tokenizers/: README.md  __init__.py  word_tokenize.py
src/fitrat/transliterator/: __init__.py  temp_alphabet.py  utils.py
src/fitrat/transliterator/cyr_lat/: alphabet.py  model.py
src/fitrat/transliterator/lat_cyr/: alphabet.py  exceptions.json  exceptions.tsv  model.py  temp
src/fitrat/transliterators/: __init__.py  temp_alphabet.py  transliterator.py  utils.py
src/fitrat/transliterators/cyr_lat/: CyrLatTransliterator.py  model_compile.py  utils.py
src/fitrat/transliterators/cyr_lat/model/: cyr_lat.hfst  cyr_lat.hfstol
src/fitrat/transliterators/lat_cyr/: LatCyrTransliterator.py  alphabet.py  model_compile.py
src/fitrat/transliterators/lat_cyr/data/: exceptions.tsv
src/fitrat/transliterators/lat_cyr/model/: exception_pruned.hfst  exception_pruned.hfstol  lat_cyr.hfst  lat_cyr.hfstol
src/transliteration/: CyrLatTransliterator.py
src/transliteration/cyr_lat/: CyrLatTransliterator.py  alphabet.py  model_compile.py
tests/: bad.json  exceptions.json  exceptions.tsv  hard.tsv  soft.tsv  test-old.hfst  test.hfst  test.lexc  test.py  ts.tsv  yayoyu.tsv
